# podmixer

./: .dockerignore  .gitignore  .justfile  Cargo.toml  Dockerfile  README.md  compose.yml  config.sample.yml  docker-compose.yml
assets/css/: custom.css
assets/js/: commons.js  config.js  main.js
back/: .gitignore  Cargo.toml
back/migrations/: 20250215081146_users.up.sql  20250215122432_config.up.sql  20250918174403_more_config_options.down.sql  20250918174403_more_config_options.up.sql
back/src/: main.rs
back/src/http/: config.rs  health.rs  mod.rs  podcast.rs  user.rs
back/src/models/: api_response.rs  config.rs  data.rs  feed.rs  id.rs  mod.rs  podcast.rs  telegram.rs  twitter.rs  user.rs  util.rs
front/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
front/src/: App.tsx  main.tsx  theme.tsx
front/src/common/: types.ts  utils.ts
front/src/components/: auth_context.tsx  auth_helper.tsx  custom_tab_panel.tsx  feed.tsx  nav_bar.tsx  podcast_form.tsx  protected_route.tsx  signin.tsx  signup.tsx  simple_date.tsx  simple_table.tsx  telegram.tsx  textfield_with_errors.tsx  twitter.tsx
front/src/components/dialogs/: podcast_dialog.tsx
front/src/layouts/: auth_layout.tsx  main_layout.tsx  protected_layout.tsx
front/src/models/: api_response.tsx  podcast.tsx
front/src/pages/: about_page.tsx  configuration_page.tsx  home_page.tsx  login_page.tsx  logout_page.tsx  podcasts_page.tsx
migrations/: 20231125120112_users.up.sql  20231125120337_podcasts.sql.down.sql  20231125120337_podcasts.sql.up.sql  20231125122247_config.up.sql
src/: main.rs
src/http/: config.rs  estatic.rs  jwt_auth.rs  mod.rs  podcast.rs  root.rs  user.rs
src/models/: config.rs  error.rs  feed.rs  mod.rs  podcast.rs  telegram.rs  twitter.rs  user.rs  util.rs
templates/: base.html  config.html  error.html  index.html  login.html
