[package]
name = "podmixer"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
cookie = "0.18.1"
futures = "0.3.30"
html2text = "0.12.5"
jsonwebtoken = "9.3.0"
minijinja = { version = "2.0.2", features = ["loader"] }
once_cell = "1.19.0"
openssl = { version = "0.10.64", features = ["vendored"] }
reqwest = { version = "0.12.4", features = ["json", "blocking", "multipart"] }
rss = "2.0.8"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
tokio = { version = "1.38.0", features = ["full", "time"] }
tower-http = { version = "0.5.2", features = ["trace", "fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["local-time", "env-filter"] }
regex = { version = "0.1.40"}

[dev-dependencies]
dotenv = "0.15.0"
