[package]
name = "podmixer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "json"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.39", features = ["serde"] }
cookie = "0.18.1"
futures = "0.3.31"
html2text = "0.14.0"
jsonwebtoken = "9.3.1"
minijinja = { version = "2.7.0", features = ["loader"] }
openssl = { version = "0.10.71", features = ["vendored"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
rss = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["sqlite", "macros", "chrono", "runtime-tokio-rustls"] }
tokio = { version = "1.43.0", features = ["full", "time"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["tracing", "env-filter", "local-time"] }

[dev-dependencies]
dotenv = "0.15.0"
