[package]
name = "podmixer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "json"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
cookie = "0.18.1"
futures = "0.3.31"
html2text = "0.15.5"
jsonwebtoken = "9.3.1"
minijinja = { version = "2.12.0", features = ["loader"] }
openssl = { version = "0.10.73", features = ["vendored"] }
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json", "multipart"] }
rss = "2.0.12"
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["sqlite", "macros", "chrono", "runtime-tokio-rustls"] }
tokio = { version = "1.47.1", features = ["full", "time"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["tracing", "env-filter", "local-time"] }

[dev-dependencies]
dotenv = "0.15.0"
